--- a/Z21Start/App.config
+++ b/Z21Start/App.config
@@ -12,6 +12,8 @@
     <!--信号灯发送信息(前段_后段)-->
     <add key="xhdSendGreen" value="090040005300_89b1"/>
     <add key="xhdSendRed" value="090040005300_88b0"/>
-
+    <!--道岔发送信息(前段_后段)-->
+    <add key="dcSendDing" value="090040005300_88b6"/>
+    <add key="dcSendFan" value="090040005300_89b7"/>
   </appSettings>
 </configuration>
