--- a/Z21Start/App.config
+++ b/Z21Start/App.config
@@ -11,9 +11,13 @@
     <add key="remotePort" value="21105"/>
     <!--信号灯发送信息(前段_后段)-->
     <add key="xhdSendGreen" value="090040005300_89b1"/>
+    <add key="xhdSendGreen1" value="090040005300_81b9"/>
     <add key="xhdSendRed" value="090040005300_88b0"/>
+    <add key="xhdSendRed1" value="090040005300_80b8"/>
     <!--道岔发送信息(前段_后段)-->
     <add key="dcSendDing" value="090040005300_88b6"/>
+    <add key="dcSendDing1" value="090040005300_80be"/>
     <add key="dcSendFan" value="090040005300_89b7"/>
+    <add key="dcSendFan1" value="090040005300_81bf"/>
   </appSettings>
 </configuration>
