--- a/Z21Start/App.config
+++ b/Z21Start/App.config
@@ -1,23 +1,34 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <appSettings>
     <!--ip设置信息-->
-    <add key="localIP" value="192.168.0.100"/>
-    <add key="localPort" value="6232"/>
-    <add key="remoteIP" value="192.168.0.111"/>
-    <add key="remotePort" value="21105"/>
+    <add key="localIP" value="192.168.0.100" />
+    <add key="localPort" value="6232" />
+    <add key="remoteIP" value="192.168.0.111" />
+    <add key="remotePort" value="21105" />
     <!--信号灯发送信息(前段_后段)-->
-    <add key="xhdSendGreen" value="090040005300_89b1"/>
-    <add key="xhdSendGreen1" value="090040005300_81b9"/>
-    <add key="xhdSendRed" value="090040005300_88b0"/>
-    <add key="xhdSendRed1" value="090040005300_80b8"/>
+    <add key="xhdSendGreen" value="090040005300_89b1" />
+    <add key="xhdSendGreen1" value="090040005300_81b9" />
+    <add key="xhdSendRed" value="090040005300_88b0" />
+    <add key="xhdSendRed1" value="090040005300_80b8" />
     <!--道岔发送信息(前段_后段)-->
-    <add key="dcSendDing" value="090040005300_88b6"/>
-    <add key="dcSendDing1" value="090040005300_80be"/>
-    <add key="dcSendFan" value="090040005300_89b7"/>
-    <add key="dcSendFan1" value="090040005300_81bf"/>
+    <add key="dcSendDing" value="090040005300_88b6" />
+    <add key="dcSendDing1" value="090040005300_80be" />
+    <add key="dcSendFan" value="090040005300_89b7" />
+    <add key="dcSendFan1" value="090040005300_81bf" />
+    <!--机车发送信息(前段_后段)-->
+    <!--前进(标志8)-->
+    <add key="jcSendFMin" value="0a004000e411_273" />
+    <add key="jcSendFMax" value="0a004000e411_f7e" />
+    <!--后退(标志0)-->
+    <add key="jcSendBMin" value="0a004000e411_2f3" />
+    <add key="jcSendBMax" value="0a004000e411_ffe" />
+    <!--停止-->
+    <add key="jcStop" value="0a004000e4f8_435b" />
+    <add key="jcStop1" value="0a004000e4f8_031b" />
   </appSettings>
 </configuration>
