--- a/Z21Start/Z21Start.csproj
+++ b/Z21Start/Z21Start.csproj
@@ -90,6 +90,7 @@
     <Compile Include="sysInfo\GetInfo.cs" />
     <Compile Include="sysInfo\dcData.cs" />
     <Compile Include="sysInfo\selectType.cs" />
+    <Compile Include="sysInfo\jcData.cs" />
     <Compile Include="sysInfo\xhdData.cs" />
     <Compile Include="tools\Tool.cs" />
     <EmbeddedResource Include="Form1.resx">
